# isnt-even-nor-odd

./: Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
